feat: initialize core mechanics, ability systems, and custom mace management for Mace-Exclusive plugin